# CV_6sem

./: .gitignore  CMakeLists.txt  README.md  build.vs.2019.cmake  build.vs.2022.cmake
data/: 100Rub.MOV  1kRub.MOV  All_banknotes orig.json  Banknotes_markup.json
data/videos_lab04/: 1kRub2.MOV  2kRub.MOV  5kRub.MOV
labs_github/lab1/: lab01.cpp
prj.labs/: CMakeLists.txt
prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
prj.labs/lab05/: CMakeLists.txt  lab05.cpp  lab05.report.md.in.txt
prj.labs/task/: CMakeLists.txt  task.cpp  task.report.md.in.txt
